Add namespace for objects in array